syntax = "proto3";

package routeguide;

service RouteGuide {
  // Obtains the feature at a given position.
  rpc GetFeature(Point) returns (Feature) {}

  // Obtains the Features available within the given Rectangle. Results are
  // streamed rather than returned at once (e.g. in a response message with a
  // repeated field), as the rectangle may cover a large area and contain a
  // huge number of features.
  rpc ListFeatures(Rectangle) returns (stream Feature) {}

  // Accepts a stream of Points on a route being traversed, returning a
  // RouteSummary when traversal is completed.
  rpc RecordRoute(stream Point) returns (RouteSummary) {}
}
